fixed a bug with social icons spacing in team

--- a/css/team.css
+++ b/css/team.css
@@ -38,7 +38,7 @@
   text-align: left;
 }
 
-.team__scoial-icons {
+.team__social-icons {
   gap: 4px;
 }
 
